# polkavm

./: Cargo.toml  README.md  pvm-metadata.json  pvm_shell_bg32.wasm
crates/polkavm-common/src/: assembler.rs  cast.rs  program.rs  utils.rs
crates/polkavm-linker/src/: program_from_elf.rs
guest-programs/test-blob/src/: main.rs
pvm-shell/: Cargo.toml  build.sh
pvm-shell/pkg/: package.json  pvm_shell.d.ts  pvm_shell.js  pvm_shell_bg.js  pvm_shell_bg.wasm  pvm_shell_bg.wasm.d.ts
pvm-shell/src/: lib.rs
pvm-shell/www/: index.js  package-lock.json  package.json
src/: lib.rs
tools/spectool/: README.md
tools/spectool-wasm/: Cargo.toml  build.sh
tools/spectool-wasm/src/: lib.rs
tools/spectool/spec/src/: fib-ecalli.txt  fib.txt  inst_add_imm.txt  inst_branch_eq_imm_ok.txt  inst_branch_eq_ok.txt  inst_branch_greater_or_equal_signed_imm_ok.txt  inst_branch_greater_or_equal_signed_ok.txt  inst_branch_greater_or_equal_unsigned_imm_ok.txt  inst_branch_greater_or_equal_unsigned_ok.txt  inst_branch_greater_signed_imm_ok.txt  inst_branch_greater_unsigned_imm_ok.txt  inst_branch_less_or_equal_signed_imm_ok.txt  inst_branch_less_or_equal_unsigned_imm_ok.txt  inst_branch_less_signed_imm_ok.txt  inst_branch_less_signed_ok.txt  inst_branch_less_unsigned_imm_ok.txt  inst_branch_less_unsigned_ok.txt  inst_branch_not_eq_imm_ok.txt  inst_branch_not_eq_ok.txt  inst_div_signed_64.txt  inst_div_signed_with_overflow.txt  inst_div_unsigned.txt  inst_div_unsigned_by_zero.txt  inst_jump.txt  inst_jump_indirect_with_offset_ok.txt  inst_load_i16.txt  (+39 more)
tools/spectool/src/: lib.rs  main.rs
