[package]
name = "pvm-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
polkavm = { path = "../crates/polkavm" }
polkavm-common = { path = "../crates/polkavm-common" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[workspace]
