[package]
name = "spectool-wasm"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
spectool = { path = "../spectool" }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[lints]
workspace = true
